# SolarHeat

./: .dockerignore  .gitignore  Dockerfile  GPIO.sh  LICENSE  README.md  client.sh  index.html  run.sh  start.sh  start_server.sh  test_client.sh
.github/workflows/: docker-build.yaml  docker-publish.yml
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  helpers.scss  index.scss  index.tsx  variables.scss
client/src/View/: Controls.tsx  Home.tsx  Settings.tsx  Status.tsx
client/src/View/styles/: Controls.scss  Home.scss  Settings.scss  Status.scss
client/src/components/: CustomSlider.tsx  LoadingGuard.tsx  LoadingSpinner.tsx  SettingsLabel.tsx  SlideIn.tsx  Status.tsx  WidgetContainer.tsx
client/src/components/styles/: CustomSlider.scss  LoadingSpinner.scss  SlideIn.scss  WidgetContainer.scss
client/src/models/: ControlModels.ts  SettingsModel.ts
client/src/service/: apiService.ts
client/src/stores/: ControlStore.ts  SettingsStore.ts  StatusStore.ts
server/: Cargo.toml
server/src/: constants.rs  error.rs  helpers.rs  main.rs  model.rs  routes_control.rs
server/src/control/: control_model.rs  control_routes_control.rs  mod.rs
server/src/model/: control_model.rs  mod.rs  model.rs  settings_model.rs
server/src/settings/: mod.rs  settings_model.rs  settings_routes_control.rs
server/src/web/: control_routes_control.rs  mod.rs  routes.rs  settings_routes_control.rs
server/tests/: quick_dev.rs
