[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sun = "0.2.0"
suncalc = "0.4.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.9"
